--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,9 +23,9 @@
   <location>/WEB-INF/views/error/error_400.jsp</location>
   </error-page>
   
-  <error-page>
+<!--   <error-page>
   <error-code>404</error-code>
   <location>/WEB-INF/views/error/error_404.jsp</location>
-  </error-page>
+  </error-page> -->
   
 </web-app>
